# HArDCore3D-Stokes

./: CMakeLists.txt  README.md
Schemes/: CMakeLists.txt  stokes_mpi.sh
Schemes/BoundaryConditions/: BoundaryConditions.cpp
Schemes/Stokes/: Generate_functions.ipynb  paraview_filter  readerrs.cpp  stokes.cpp  stokes.hpp  stokes_mpi.sh  stokes_petsc.hpp  stokes_structs.hpp
Schemes/Stokes-tests/: CMakeLists.txt  exactcomplex.cpp  localcomplex.cpp  potentialcurl.cpp  potentialgrad.cpp  potentialnabla.cpp  stabconsistency.cpp  testall.sh  testfunction.hpp
include/Mesh/: MeshObject.hpp
src/Common/: basis.cpp  basis.hpp  display_timer.hpp  parallel_for.hpp  polynomialspacedimension.hpp
src/DDRCore/: xsl.cpp  xsl.hpp
src/Plot/: vtu_writer.cpp  vtu_writer.hpp
src/Quadrature/: GMpoly_cell.cpp  GMpoly_cell.hpp  GMpoly_edge.hpp  GMpoly_face.cpp  GMpoly_face.hpp  tetra_quad.cpp
src/Savestates/: CMakeLists.txt  savestates.cpp  savestates.hpp
src/Solver/: CMakeLists.txt  hardcore3d_petsc.cpp  hardcore3d_petsc.hpp  monitor.cxx  options.cxx  petsc_altmain.cpp  petsc_common.hpp  problem_typedef.hpp  readme
src/StokesCore/: CMakeLists.txt  stokescore.cpp  stokescore.hpp  xcurlstokes.cpp  xcurlstokes.hpp  xgradstokes.cpp  xgradstokes.hpp  xnablastokes.cpp  xnablastokes.hpp  xvlstokes.cpp  xvlstokes.hpp
