# Library: Solver

if (WITH_PETSC_MPI)
  ADD_LIBRARY(solver hardcore3d_petsc.cpp)
  TARGET_INCLUDE_DIRECTORIES(solver PUBLIC ${MPI_CXX_INCLUDE_PATH} ${PETSC_INCLUDE_DIRS})
  
  ADD_EXECUTABLE(petsc_altmain petsc_altmain.cpp)
  TARGET_INCLUDE_DIRECTORIES(petsc_altmain PRIVATE ${MPI_CXX_INCLUDE_PATH} ${PETSC_INCLUDE_DIRS})
  TARGET_COMPILE_OPTIONS(petsc_altmain PRIVATE ${MPI_CXX_COMPILE_FLAGS})
  TARGET_LINK_LIBRARIES(petsc_altmain ${MPI_CXX_LIBRARIES} ${MPI_CXX_LINK_FLAGS} ${PETSC_LDFLAGS})
  TARGET_LINK_DIRECTORIES(petsc_altmain PUBLIC ${PETSC_LIBRARY_DIRS})
ENDIF()

